--- a/frontend/src/components/ActivityReport/ActivityCard/ActivityCard.css
+++ b/frontend/src/components/ActivityReport/ActivityCard/ActivityCard.css
@@ -35,3 +35,20 @@
     top: -20px;
     left: 5px;
 }
+
+.activity-UD{
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+
+}
+
+.but-rec-del{
+    border: none;
+    background: none;
+    align-self: start;
+}
+button:focus{
+    outline: none;
+}
